--- a/model.qmd
+++ b/model.qmd
@@ -1,15 +1,9 @@
 ---
-title: "Home"
+title: "Main model"
 execute: 
   echo: false
-  warnings: false
+  warning: false
 ---
-By using a dataset from Norway on 110,204 patient admissions of people with Sepsis from 2011 to 2012, we wanted to understand the probability of survival based upon the factors of numbers of previous episodes of Sepsis and gender. The data was sourced from Kaggle on containing deidentified data on hospitalized patients. It includes the variables of sex, age, episode number and survival outcome.Though healthcare has dramatically changed over the years, we believe for these predictions to hold true. We used a logistic regression model with the variables of age (numeric variable), sex (categorical variable) and episode number (numeric) set to the outcome of the probability of survival for the i-th individual. From modeling the variables as a logistic function to the outcome, we discovered that being female can increases the odds of survival by 18%, higher age decreases the probability of survival by 4%, while higher episode numbers have slightly lower chance of survival of about 3%, though it may be as much as 5% or as low as 0%.
-
-## Sepsis Survival Rate:
-<small>(Episode number refers to the number of times a patient has had sepsis)</small>
-
-
 
 ```{r}
 #| label: Setup
@@ -66,6 +60,16 @@ newobs <- expand.grid(
 )
 
 ```
+$$
+\text{logit}(\pi_i) = \beta_0 + \beta_1 \cdot \text{age}_i + \beta_2 \cdot \text{sex}_{i,\text{Male}} + \beta_3 \cdot \text{episode\_number}_i
+$$
+
+```{r}
+#| label: table
+#| warning: false
+tbl_regression(fit_sepsis)
+```
+
 
 ```{r}
 #| label: plot
@@ -93,27 +97,3 @@ fit_sepsis |>
 
 ```
 
-
-
-## Overview of Sepsis:
-Sepsis is a dangerous condition that can occur to anyone. It happens when the body’s immune system responds improperly to infection and damages healthy tissue. This can lead to organ failure, widespread inflammation and possibly death. Sepsis itself is not a disease, but rather caused by other infectious diseases. 
-
-  Important symptoms to lookout for are...
-  
-    -  Rashes
-    
-    -  Change in heart rate
-    
-    -  Change in body temperature
-    
-    -  Fatigue
-    
-    -  Disorientation
-    
-    -  Discomfort
-    
-    -  Clammy or sweaty skin
-    
-    -  Shivers or chills
-
-  
